[package]
name = "rquarfs"
version = "0.1.0"
authors = ["Luis Ayuso <luis.f.ayuso@gmail.com>"]
resources = ["assets", "shaders"]

[dependencies]
    glium = "0.15.0"
    time = "0.1"
    cgmath = "0.10"
    rand = "*"
    image = "*"
    threadpool = "*"
	regex = "*"
	glob = "*"
	glutin = "*"

[profile.release]
    debug = true
