[package]
name = "rquarfs"
version = "0.1.0"
authors = ["Luis Ayuso <luis.f.ayuso@gmail.com>"]
resources = ["assets", "shaders"]

[dependencies]
    glium = "0.16.0"
    time = "0.1"
    cgmath = "0.10"
    rand = "*"
    image = "*"
	regex = "*"
	glob = "*"
	glutin = "*"
	lazy_static = "0.1.*"
	rgraph = "0.2.1"

[profile.release]
    debug = true
